# rose

config/: automake_conditional_display_makefile  support-cuda.m4  support-klt.m4  support-opencl.m4  support-rose.m4
projects/: Makefile.am
projects/CompilerDirectives/: README.md
projects/TileK/: Makefile.am  tilek.rc.in
projects/TileK/include/DLX/TileK/: language.hpp
projects/TileK/include/KLT/TileK/: generator-basic.hpp
projects/TileK/lib/: Makefile.am  dlx-clauses.cpp  dlx-constructs.cpp  dlx-frontend.cpp  dlx-language.cpp  tilek-rtl-basic.c  tilek-rtl-threads.c  tilek-rtl.c
projects/TileK/src/: Makefile.am  tilek.cpp
projects/TileK/tests/: all-square-benchmark.sh  eval-benchmark.sh  make-benchmark.sh  plot-benchmark.plot  plot-benchmark.sh  utils.c
projects/TileK/tests/accelerator/CUDA/: Makefile.am
projects/TileK/tests/accelerator/OpenCL/: Makefile.am
projects/TileK/tests/basic/: Makefile.am  test_0.c  test_1.c  test_10.c  test_11.c  test_2.c  test_3.c  test_4.c  test_5.c
projects/TileK/tests/rtl/: Makefile.am  static_0.c  static_1.c  static_2.c  test_0.c  test_1.c  test_11.c  test_12.c  test_2.c
projects/TileK/tests/rtl/host/: Makefile.am  kernel_0.c  static_0.c  test_0-static.c  test_0.c
projects/TileK/tests/rtl/opencl/: Makefile.am  static_0.c  test_0-opencl-kernel.cl  test_0-static.c  test_0.c
projects/TileK/tests/rtl/threads/: Makefile.am  static_0.c  test_0-static.c  test_0-threads-kernel.c  test_0.c
projects/TileK/tests/rtl/tools/: Makefile.am  empty-static.c
projects/TileK/tests/threads/: Makefile.am  sgemm.c  sgemm_1.c  sgemm_2.c  sgemm_3.c  sgemm_4.c  sgemm_5.c  sgemm_6.c  sgemm_7.c  sgemm_8.c  test_1.c  test_2.c
projects/TileK/tests/tilek/host/: Makefile.am  test_0.c  test_1.c  test_2.c
projects/TileK/tests/tilek/opencl/: Makefile.am  test_0.c  test_1.c
projects/TileK/tests/tilek/threads/: Makefile.am  test_0.c  test_1.c
projects/TileK/tools/: README.md  collect-TileTrees.sh  compile.sh  eval.sh
src/frontend/: Makefile.am
src/frontend/DLX/: LanguageDesc.py  LanguageDescUnparser.py  LanguageUnparserTest.py  UnparserBase.py  UnparserTest.py
src/frontend/DLX/include/DLX/Core/: clauses.hpp  compiler.hpp  constructs.hpp  directives.hpp  frontend.hpp  parser.hpp
src/frontend/DLX/lib/core/: Makefile.am  parser.cpp
src/midend/: Makefile.am
src/midend/KLT/: README.md  klt.rc.in
src/midend/KLT/include/KLT/Core/: api.hpp  descriptor.hpp  generator.hpp  kernel.hpp  looptree.hpp  utils.hpp
src/midend/KLT/include/KLT/DLX/: compiler.hpp
src/midend/KLT/include/KLT/MDCG/: static-initializer.hpp
src/midend/KLT/include/KLT/RTL/: build-context.h  context.h  data-environment.h  data.h  definition.h  device.h  init.h  io.h  kernel.h  klt-rtl.h  loop.h  memory.h  opencl-utils.h  tile.h
src/midend/KLT/lib/core/: Makefile.am  api.cpp  descriptor.cpp  generator.cpp  kernel.cpp  looptree.cpp
src/midend/KLT/lib/mdcg/: Makefile.am  static-initializer.cpp
src/midend/KLT/lib/rtl/: Makefile.am  build-context.c  data-environment.c  data.c  device.c  init.c  io.c  kernel.c  memory.c  opencl-utils.c
src/midend/KLT/tools/: Makefile.am  TileTree-JSON-to-GraphViz.py  build-TileTree-from-JSONs.py  klt-dump-devices.c  klt-dump-static.c  merge-json-features.py
src/midend/MDCG/include/MDCG/Tools/: api.hpp  static-initializer.hpp
src/midend/MDCG/lib/model/: Makefile.am
src/midend/MDCG/lib/tools/: Makefile.am  api.cpp  static-initializer.cpp
src/midend/MFB/include/MFB/KLT/: driver.hpp
src/midend/MFB/include/MFB/Sage/: variable-declaration.hpp
src/midend/MFB/lib/klt/: Makefile.am  driver.cpp
src/midend/MFB/lib/sage/: Makefile.am  variable-declaration.cpp
src/midend/MFB/lib/utils/: Makefile.am
tests/nonsmoke/functional/roseTests/ompLoweringTests/: Makefile.am
