
include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs

lib_LTLIBRARIES=libKLT-RTL.la

libKLT_RTL_la_SOURCES= \
  data-environment.c \
  device.c \
  memory.c \
  kernel.c \
  data.c \
  build-context.c \
  init.c \
  context.c
libKLT_RTL_la_CFLAGS=-g -O0 -I$(top_srcdir)/src/midend/KLT/include




